coles_scraper_problem_overview.txt
## Coles Store Scraper System Overview and Current Problem

### 1. Relevant File Paths:

*   **Main Scraper:** C:\Users\ethan\coding\splitcart\api\scrapers\find_coles_stores.py
*   **Utility Functions:** C:\Users\ethan\coding\splitcart\api\utils\shop_scraping_utils\coles.py
*   **Django Management Command:** C:\Users\ethan\coding\splitcart\api\management\commands\find_coles_stores.py
*   **Temporary Cleaned Output:** C:\Users\ethan\coding\splitcart\coles_stores_cleaned.json
*   **Final Organized Output Directory:** C:\Users\ethan\coding\splitcart\api\data\store_data\stores_coles\ (contains subdirectories like `coles-supermarkets`, `liquorland`, etc., with state-specific JSON files)
*   **Progress File:** C:\Users\ethan\coding\splitcart\api\data\store_data\stores_coles\find_coles_stores_progress.json

### 2. Overview of the Coles Store Scraper System:

**Purpose:** The system is designed to thoroughly scrape Coles and Liquorland store location data across all of Australia.

**Methodology:** It employs a hybrid scraping approach for efficiency and resilience:
*   **Initial Session Setup:** Selenium WebDriver is launched once at the beginning of the scraping process. Its primary role is to navigate to `https://www.coles.com.au` and allow for manual CAPTCHA solving. This step is crucial for establishing a valid, human-like session and obtaining necessary cookies.
*   **API-First Scraping:** After the CAPTCHA is solved and the session is established, the Selenium browser is kept open, but the script primarily interacts with the Coles GraphQL API directly. It uses `driver.execute_async_script` to make `fetch` requests from within the browser's context. This is significantly faster and less resource-intensive than full page navigation.
*   **Geographical Iteration:** The scraper iterates through a predefined geographical grid (using latitude and longitude steps) to cover the entire Australian landmass, ensuring comprehensive store discovery.
*   **Data Cleaning and Storage:**
    *   As store data is received from the GraphQL API, it is immediately cleaned (e.g., the `distance` field is removed).
    *   Cleaned stores are incrementally saved to a temporary JSON file (`coles_stores_cleaned.json`).
    *   A progress file (`find_coles_stores_progress.json`) tracks the last successfully processed coordinates, enabling the scraper to resume from where it left off if interrupted.
*   **Automated Organization:** Upon successful completion of the entire scraping process, a utility script (`organize_coles_stores.py`) is automatically invoked. This utility reads the `coles_stores_cleaned.json` file, groups stores by brand (e.g., "Coles Supermarkets", "Liquorland") and then by state, saving them into separate, structured JSON files within the `api/data/store_data/stores_coles/` directory. Each final JSON file includes metadata (number of stores, company, state, date scraped).
*   **Cleanup:** The temporary `coles_stores_cleaned.json` and the progress file are deleted once the entire process (scraping and organization) is successfully completed.

**Execution:** The scraper is executed via a Django management command: `python manage.py find_coles_stores`.

### 3. Detailed Explanation of the Current Problem:

**Error Message:**
```
A critical error occurred: API Error: SyntaxError: Unexpected token '<', "<html styl"... is not valid JSON
Restarting scraper in 10 seconds...
Browser closed.
```
(Followed by a restart and the same error repeating)

**Context of the Error:**
The error occurs within the `find_coles_stores()` function, specifically when the script attempts to parse the response from the GraphQL API using `json.loads(json_response_str)`. The `json_response_str` variable, which is expected to contain a JSON string, instead contains HTML content (indicated by `"<html styl"`).

**Interpretation:**
This indicates that the Coles server is not returning the expected JSON response from the GraphQL endpoint. Instead, it's serving an HTML page. This is a common tactic used by websites to block automated scraping. Possible reasons include:
*   **Rate Limiting:** The scraper might be making requests too frequently, triggering a temporary block.
*   **IP Blocking:** The server might have identified and temporarily blocked the IP address from which the requests are originating.
*   **Bot Detection:** The server's security measures might have detected the automated nature of the requests and are serving a CAPTCHA page, a block page, or a generic error page in HTML format, rather than the API's JSON output.
*   **Connection Reset:** The `ConnectionResetError` in the traceback further suggests that the remote host (Coles server) is actively closing the connection, reinforcing the idea of a server-side block.

**Current Handling and Its Limitation:**
The script is designed to catch critical errors, close the Selenium browser, wait for 10 seconds, and then restart a new browser session, resuming from the last saved coordinates. However, this strategy is proving insufficient to bypass the current block. Simply restarting the browser and getting a new session does not seem to reset the server-side block or IP-based restrictions.

**Goal for More Powerful Model:**
The primary goal is to find a more robust and effective strategy to handle this persistent API blocking. This might involve:
*   **Dynamic Delay Adjustment:** Implementing more sophisticated, possibly randomized, delays between requests.
*   **Proxy Rotation:** Utilizing a pool of proxies to rotate IP addresses, making it harder for the server to block based on IP.
*   **User-Agent Rotation:** Varying the User-Agent string to appear as different browsers/devices.
*   **Advanced Bot Evasion:** Investigating if the HTML content returned contains a hidden CAPTCHA or specific error message that can be programmatically identified and handled (though manual CAPTCHA solving is already in place).
*   **Error Analysis:** Further analyzing the HTML content returned to understand the exact nature of the block (e.g., "Access Denied," "Too Many Requests," or a redirect to a CAPTCHA).
*   **Session Management:** Exploring if there are other session-related parameters or cookies that need to be managed or refreshed more aggressively.
*   **Subscription Key Validity:** Confirming the `ocp-apim-subscription-key` remains valid and is not being invalidated or rate-limited by the server.

The `DEPRECATED_ENDPOINT` messages from `google_apis\gcm\engine\registration_request.cc` appear to be unrelated internal Chrome/Selenium warnings and are not the cause of the scraping failure.


output: 
Progress: |███████████████████████████-------------| 68.56% (4021/5865) | Stores Found: 1612 | Coords: (-20.50, 144.50)

A critical error occurred: API Error: SyntaxError: Unexpected token '<', "<html styl"... is not valid JSON
Restarting scraper in 10 seconds...

Browser closed.

--- Launching Selenium browser to warm up session and make API calls ---

DevTools listening on ws://127.0.0.1:61978/devtools/browser/2df24661-8c05-46c1-8972-919a0aa2fa1e
ACTION REQUIRED: Please solve any CAPTCHA in the browser, then press Enter here to continue...WARNING: All log messages before absl::InitializeLog() is called are written to STDERR
I0000 00:00:1754553872.263049   43360 voice_transcription.cc:58] Registering VoiceTranscriptionCapability
[11716:33940:0807/100432.808:ERROR:google_apis\gcm\engine\registration_request.cc:291] Registration response error message: DEPRECATED_ENDPOINT
Created TensorFlow Lite XNNPACK delegate for CPU.
Attempting to use a delegate that only supports static-sized tensors with a graph that has dynamic-sized tensors (tensor#-1 is a dynamic-sized tensor).
[11716:33940:0807/100502.788:ERROR:google_apis\gcm\engine\registration_request.cc:291] Registration response error message: DEPRECATED_ENDPOINT
[11716:33940:0807/100602.948:ERROR:google_apis\gcm\engine\registration_request.cc:291] Registration response error message: DEPRECATED_ENDPOINT


Starting Coles store data scraping...
Progress: |██████████████████████------------------| 56.69% (3325/5865) | Stores Found: 1612 | Coords: (-24.50, 136.50)[11716:33940:0807/100728.817:ERROR:google_apis\gcm\engine\registration_request.cc:291] Registration response error message: DEPRECATED_ENDPOINT
Progress: |███████████████████████-----------------| 58.64% (3439/5865) | Stores Found: 1612 | Coords: (-24.00, 151.00)Traceback (most recent call last):
  File "C:\Users\ethan\AppData\Local\Programs\Python\Python312\Lib\http\client.py", line 1428, in getresponse
    response.begin()
  File "C:\Users\ethan\AppData\Local\Programs\Python\Python312\Lib\http\client.py", line 331, in begin
    version, status, reason = self._read_status()
                              ^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ethan\AppData\Local\Programs\Python\Python312\Lib\http\client.py", line 292, in _read_status
    line = str(self.fp.readline(_MAXLINE + 1), "iso-8859-1")
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ethan\AppData\Local\Programs\Python\Python312\Lib\socket.py", line 720, in readinto
    return self._sock.recv_into(b)
           ^^^^^^^^^^^^^^^^^^^^^^^